# makegen

./: .gitignore  LICENSE  makegen.cabal
src/: Makegen.hs
src/Makegen/Internal/: Digest.hs  Joined.hs  Stable.hs
src/test/: Main.hs
