name:                makegen
version:             0.9.0
synopsis:            Makefile generator
description:         Makefile generator
homepage:            https://github.com/Rufflewind/makegen
bug-reports:         https://github.com/Rufflewind/makegen/issues
license:             MIT
license-file:        LICENSE
author:              Phil Ruffwind
maintainer:          rf@rufflewind.com
copyright:           2016 (C) Phil Ruffwind
category:            Development
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  changelog.md
  LICENSE
  README.md

source-repository head
  type:     git
  location: https://github.com/Rufflewind/makegen

library
  hs-source-dirs:      src
  exposed-modules:     Makegen
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , transformers
  default-language:    Haskell2010

test-suite makegen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src
  main-is:             Test.hs
  build-depends:       base
                     , makegen
                     , containers
                     , transformers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
